--- a/frontend/src/styles/Contracts.css
+++ b/frontend/src/styles/Contracts.css
@@ -21,6 +21,7 @@
     color: #000000;
     padding: 5px;
     margin-right: 5px;
+    max-height: 35px;
 }
 
 .custom-button:hover {
@@ -60,4 +61,10 @@
 .th, .td {
     min-width: 0px;
     width: min-content
+}
+thead th {
+    font-size: 24px;
+    position: sticky;
+    top: 0;
+    background: #FFFFFF;
 }
